--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,93 @@ h4:hover,
   transform: scale(1.05);
 }
 
+.Contact-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 30px;
+  position: relative;
+}
+
+.Contact-section form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.Contact-section h4{
+  margin-bottom: 0;
+  margin-right: 0;
+  font-size: 3rem;
+}
+
+.Contact-section input, 
+textarea{
+  border-radius: 20px;
+  background-color: white;
+  width: 70%;
+  max-width: 700px;
+  padding: 4px 12px;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
+}
+
+input:focus-within,
+textarea:focus-within{
+  outline: none;
+  border-color: green;
+  border-width: 3px;
+}
+
+.Contact-section button{
+  background-color: transparent;
+  border-radius: 20px;
+  border-color:black;
+  padding: 4px 12px;
+  display: flex;
+  align-items: center;
+}
+
+.Contact-section button:hover{
+  opacity: 50%;
+  cursor: pointer;
+  border-color: green;
+}
+
+.Contact-body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  
+}
+
+.scroll-up{
+  padding: 1px 15px;
+  background-color: black;
+  color: white;
+  font-size: 3rem;
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  bottom: 5%;
+  border-radius: 100px;
+  opacity: 0.5;
+}
+
+.scroll-up:hover{
+  cursor: pointer;
+  opacity: 1;
+  color: green;
+  background-color: white;
+}
+
+
 @media (max-width: 600px) {
   #projects h2 {
     font-size: 3em;
@@ -332,6 +419,60 @@ h4:hover,
   .project-info p {
     font-size: 0.9em;
   }
+}
+
+@media (max-width:400px){
+
+  .project {
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    width: 100%;
+    max-width: 200px;
+    text-align: center;
+  }
+
+  .project img {
+    width: 100%;
+    height: auto;
+  }
+
+  .project-info {
+    padding: 5px;
+  }
+
+  
+.project-info a {
+  display: inline-block;
+  padding: 5px 5px;
+
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+ 
+  nav {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 3vh;
+    z-index: 100;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    font-size: 0.7rem;
+    margin: auto;
+  }
+  
+  .nav-links {
+    display: flex;
+    gap: 5px;
+  }
+
 }
 
 @media (min-width: 500px) {
@@ -422,4 +563,51 @@ h4:hover,
   .main-text p {
     font-size: 0.8rem;
   }
+}
+
+@media (min-width:768px){
+
+  
+.Contact-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 30px;
+  position: relative;
+}
+
+.Contact-section form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  width: 70vw;
+  max-width: 700px;
+}
+
+.Contact-section h4{
+  margin-bottom: 0;
+  margin-right: 0;
+  font-size: 3rem;
+}
+
+.Contact-section input, 
+textarea{
+  border-radius: 20px;
+  background-color: white;
+  width: 70%;
+  max-width: 700px;
+  padding: 4px 12px;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
+}
+
+.Contact-section textarea{
+  padding-bottom: 100px;
+}
+
 }
