--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,7 @@ h4:hover,
   transform: scale(1.05);
 }
 
-.Contact-section{
+.Contact-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -329,21 +329,21 @@ h4:hover,
   position: relative;
 }
 
-.Contact-section form{
+.Contact-section form {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
 }
 
-.Contact-section h4{
+.Contact-section h4 {
   margin-bottom: 0;
   margin-right: 0;
   font-size: 3rem;
 }
 
-.Contact-section input, 
-textarea{
+.Contact-section input,
+textarea {
   border-radius: 20px;
   background-color: white;
   width: 70%;
@@ -353,40 +353,37 @@ textarea{
   display: flex;
   flex-direction: column;
   align-items: center;
- 
 }
 
 input:focus-within,
-textarea:focus-within{
+textarea:focus-within {
   outline: none;
   border-color: green;
   border-width: 3px;
 }
 
-.Contact-section button{
+.Contact-section button {
   background-color: transparent;
   border-radius: 20px;
-  border-color:black;
+  border-color: black;
   padding: 4px 12px;
   display: flex;
   align-items: center;
 }
 
-.Contact-section button:hover{
+.Contact-section button:hover {
   opacity: 50%;
   cursor: pointer;
   border-color: green;
 }
 
-.Contact-body{
+.Contact-body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  
 }
 
-.scroll-up{
+.scroll-up {
   padding: 1px 15px;
   background-color: black;
   color: white;
@@ -399,13 +396,12 @@ textarea:focus-within{
   opacity: 0.5;
 }
 
-.scroll-up:hover{
+.scroll-up:hover {
   cursor: pointer;
   opacity: 1;
   color: green;
   background-color: white;
 }
-
 
 @media (max-width: 600px) {
   #projects h2 {
@@ -421,8 +417,7 @@ textarea:focus-within{
   }
 }
 
-@media (max-width:400px){
-
+@media (max-width: 400px) {
   .project {
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -441,16 +436,15 @@ textarea:focus-within{
     padding: 5px;
   }
 
-  
-.project-info a {
-  display: inline-block;
-  padding: 5px 5px;
+  .project-info a {
+    display: inline-block;
+    padding: 5px 5px;
 
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
- 
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+
   nav {
     position: fixed;
     display: flex;
@@ -467,12 +461,11 @@ textarea:focus-within{
     font-size: 0.7rem;
     margin: auto;
   }
-  
+
   .nav-links {
     display: flex;
     gap: 5px;
   }
-
 }
 
 @media (min-width: 500px) {
@@ -520,6 +513,13 @@ textarea:focus-within{
     gap: 120px;
   }
 
+  input:focus-within,
+  textarea:focus-within {
+    outline: none;
+    border-color: green;
+    border-width: 3px;
+  }
+
   .resume-button {
     display: flex;
     flex-direction: column;
@@ -565,49 +565,45 @@ textarea:focus-within{
   }
 }
 
-@media (min-width:768px){
+@media (min-width: 768px) {
+  .Contact-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 30px;
+    position: relative;
+  }
 
-  
-.Contact-section{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 30px;
-  position: relative;
-}
+  .Contact-section form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 70vw;
+    max-width: 700px;
+  }
 
-.Contact-section form{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  width: 70vw;
-  max-width: 700px;
-}
+  .Contact-section h4 {
+    margin-bottom: 0;
+    margin-right: 0;
+    font-size: 3rem;
+  }
 
-.Contact-section h4{
-  margin-bottom: 0;
-  margin-right: 0;
-  font-size: 3rem;
-}
+  .Contact-section input,
+  textarea {
+    border-radius: 20px;
+    background-color: white;
+    width: 70%;
+    max-width: 700px;
+    padding: 4px 12px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.Contact-section input, 
-textarea{
-  border-radius: 20px;
-  background-color: white;
-  width: 70%;
-  max-width: 700px;
-  padding: 4px 12px;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
- 
-}
-
-.Contact-section textarea{
-  padding-bottom: 100px;
-}
-
+  .Contact-section textarea {
+    padding-bottom: 100px;
+  }
 }
