--- a/styles.css
+++ b/styles.css
@@ -258,40 +258,48 @@ h4:hover,
 }
 
 #projects {
-  padding: 100px 20px;
   background-color: #fff;
   display: flex;
   text-align: center;
   flex-direction: column;
   min-height: 100vh;
-  gap: 15px;
 }
 
 #projects h2 {
-  margin-bottom: 40px;
   font-size: 3rem;
 }
 
 .project-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-  place-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px; 
+  align-items: stretch; 
+  margin-left: 35px;
 }
+
 
 .project {
   border: 1px solid #ddd;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
   transition: transform 0.3s;
   width: 100%;
   max-width: 350px;
   text-align: center;
+  padding: 20px;
+  min-height: 700px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+
 .project img {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  max-height: 400; 
+  object-fit: contain; 
 }
+
 
 .project-info {
   padding: 20px;
@@ -384,10 +392,10 @@ textarea:focus-within {
 }
 
 .scroll-up {
-  padding: 1px 15px;
-  background-color: black;
-  color: white;
-  font-size: 3rem;
+  padding: 0px 7px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 4rem;
   width: fit-content;
   height: fit-content;
   position: absolute;
@@ -415,6 +423,11 @@ textarea:focus-within {
   .project-info p {
     font-size: 0.9em;
   }
+
+  .project-container{
+    gap: 100px;
+  }
+
 }
 
 @media (max-width: 400px) {
@@ -427,10 +440,16 @@ textarea:focus-within {
     text-align: center;
   }
 
+  .project-container {
+    gap: 100px;
+  }
+
   .project img {
     width: 100%;
     height: auto;
+    
   }
+  
 
   .project-info {
     padding: 5px;
@@ -573,6 +592,13 @@ textarea:focus-within {
     text-align: center;
     gap: 30px;
     position: relative;
+  }
+
+  .project-container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    place-items: center;
+    gap: 100px;
   }
 
   .Contact-section form {
