--- a/styles.css
+++ b/styles.css
@@ -264,6 +264,7 @@ h4:hover,
   text-align: center;
   flex-direction: column;
   min-height: 100vh;
+  gap: 50px;
 }
 
 #projects h2 {
@@ -432,7 +433,82 @@ textarea:focus-within {
 
 }
 
-@media (max-width: 400px) {
+@media (max-width: 376px){
+
+  
+#projects {
+  background-color: #fff;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+#projects h2 {
+  font-size: 3rem;
+}
+
+.project-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px; 
+  align-items: stretch; 
+  margin-left: 100px;
+  justify-content: center;
+}
+
+
+.project {
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
+  transition: transform 0.3s;
+  max-width: 350px;
+  text-align: center;
+  padding: 20px;
+  min-height: 700px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.project img {
+  max-width: 100%;
+  max-height: 400; 
+  object-fit: contain; 
+}
+
+
+.project-info {
+  padding: 20px;
+}
+
+.project-info h3 {
+  margin: 0 0 10px;
+  font-size: 1.5em;
+}
+
+.project-info p {
+  font-size: 1em;
+  margin-bottom: 20px;
+}
+
+.project-info a {
+  display: inline-block;
+  padding: 10px 20px;
+
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+}
+
+@media (max-width: 450px) {
   .project {
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -521,6 +597,46 @@ textarea:focus-within {
     flex: 1;
     transform: scale(1);
   }
+
+  #projects {
+    background-color: #fff;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+  
+  #projects h2 {
+    font-size: 3rem;
+  }
+  
+  .project-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px; 
+    align-items: stretch; 
+    margin-left: 30px;
+    justify-content: center;
+  }
+  
+  
+  .project {
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
+    transition: transform 0.3s;
+    max-width: 350px;
+    text-align: center;
+    padding: 20px;
+    min-height: 700px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
 }
 
 @media (min-width: 640px) {
