--- a/styles.css
+++ b/styles.css
@@ -282,7 +282,7 @@ h4:hover,
 
 .project {
   border: 1px solid #ddd;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s;
   width: 100%;
   max-width: 350px;
@@ -293,6 +293,13 @@ h4:hover,
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-radius: 30px;
+
+  
+}
+
+.project:hover{
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
 }
 
 
@@ -463,7 +470,7 @@ textarea:focus-within {
 
 .project {
   border: 1px solid #ddd;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s;
   max-width: 350px;
   text-align: center;
@@ -473,6 +480,7 @@ textarea:focus-within {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-radius: 30px;
 }
 
 
@@ -511,15 +519,17 @@ textarea:focus-within {
 @media (max-width: 450px) {
   .project {
     border: 1px solid #ddd;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s;
     width: 100%;
     max-width: 200px;
     text-align: center;
+    border-radius: 30px;
   }
 
   .project-container {
     gap: 100px;
+    margin-left: 70px;
   }
 
   .project img {
@@ -625,7 +635,7 @@ textarea:focus-within {
   
   .project {
     border: 1px solid #ddd;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s;
     max-width: 350px;
     text-align: center;
@@ -635,6 +645,7 @@ textarea:focus-within {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 30px;
   }
   
 }
@@ -714,7 +725,7 @@ textarea:focus-within {
 
   .project-container {
     display: grid;
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
     place-items: center;
     gap: 100px;
   }
