--- a/styles.css
+++ b/styles.css
@@ -417,25 +417,25 @@ textarea:focus-within {
 }
 
 #skills .skill i {
-  font-size: 3rem; /* Adjust size as needed */
-  margin-bottom: 10px; /* Add spacing below icon */
+  font-size: 3rem;
+  margin-bottom: 10px;
 }
 
 .main-text i {
-  font-size: 3rem; /* Adjust as needed */
+  font-size: 3rem;
 }
 
 #skills h2 {
   font-size: 3rem;
   text-align: center;
-  margin-top: 50px; /* Add margin at the top for spacing */
+  margin-top: 50px;
   margin-bottom: 100px;
 }
 
 .skills-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Create a 2x2 grid */
-  gap: 20px; /* Reduce vertical and horizontal spacing */
+  grid-template-columns: repeat(2, 1fr);
+  gap: 60px;
   max-width: 600px;
   width: 100%;
   justify-content: center;
@@ -471,7 +471,8 @@ textarea:focus-within {
 .project:hover {
   transform: scale(1.05);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-  background-color: rgba(3, 227, 243, 0.2);
+  background-color: rgba(3, 227, 243, 1);
+  color: black;
 }
 
 span {
@@ -559,6 +560,15 @@ span:hover {
 }
 
 @media (max-width: 600px) {
+  .skills-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 60px;
+    max-width: 600px;
+    width: 100%;
+    justify-content: center;
+  }
+
   #projects h2 {
     font-size: 3em;
   }
@@ -772,7 +782,7 @@ span:hover {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     align-items: stretch;
-    margin-left: 30px;
+    margin-left: 0px;
     justify-content: center;
   }
 
